Changelog Edit & .jar Build

--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,5 +1,12 @@
 Changelog:
 
+-----------
+***1.0.0***
+-----------
+Fixes:
+    -fusion table no longer crashes when players put random crap into it
+    -fusion table can no longer give upgraded bits for free
+
 ----------
 ***BETA***
 ----------
