(1.0.1) Dye Table Water Bucket
Dying a bit clear no longer consumes the water from a water bucket.

--- a/bin/changelog.txt
+++ b/bin/changelog.txt
@@ -1,6 +1,12 @@
 Changelog:
 
 -----------
+***1.0.1***
+-----------
+Features:
+    -dye table no longer consumes water bucket for clear bits
+
+-----------
 ***1.0.0***
 -----------
 Fixes:
