--- a/bin/changelog.txt
+++ b/bin/changelog.txt
@@ -1,5 +1,18 @@
 Changelog:
 
+-----------
+***1.0.1***
+-----------
+Features:
+    -dye table no longer consumes water bucket for clear bits
+
+-----------
+***1.0.0***
+-----------
+Fixes:
+    -fusion table no longer crashes when players put random crap into it
+    -fusion table can no longer give upgraded bits for free
+
 ----------
 ***BETA***
 ----------
