--- a/src/main/resources/assets/bcm/lang/en_US.lang
+++ b/src/main/resources/assets/bcm/lang/en_US.lang
@@ -65,16 +65,21 @@ item.pink.name=Pink Bit
 item.darkpink.name=Dark Pink Bit
 item.darkestpink.name=Darkest Pink Bit
 item.clearbit.name=Clear Bit
-item.firebit.name=Fire Bit
-item.earthbit.name=Earth Bit
-item.lightningbit.name=Lightning Bit
-item.icebit.name=Ice Bit
-item.spatialbit.name=Spatial Bit
+item.fire.name=Fire Bit
+item.earth.name=Earth Bit
+item.lightning.name=Lightning Bit
+item.icet.name=Ice Bit
+item.spatial.name=Spatial Bit
 item.ItemBitSword.name=Bit Sword
 
 tile.BlockBitCrucible.name=Bit Crucible
 tile.BlockBitForge.name=Bit Forge
 tile.BlockBitDyeTable.name=Bit Dye Table
 tile.BlockBitFusionTable.name=Bit Fusion Table
+tile.BlockFireOre.name=Fire Bit Ore
+tile.BlockEarthOre.name=Earth Bit Ore
+tile.BlockLightningOre.name=Lightning Bit Ore
+tile.BlockIceOre.name=Ice Bit Ore
+tile.BlockSpatialOre.name=Spatial Bit Ore
 
 itemGroup.tabBitCraftingMod=BitCrafting
