--- a/bin/assets/bcm/lang/en_US.lang
+++ b/bin/assets/bcm/lang/en_US.lang
@@ -68,7 +68,7 @@ item.clearbit.name=Clear Bit
 item.fire.name=Fire Bit
 item.earth.name=Earth Bit
 item.lightning.name=Lightning Bit
-item.icet.name=Ice Bit
+item.ice.name=Ice Bit
 item.spatial.name=Spatial Bit
 item.ItemBitSword.name=Bit Sword
 
