BitChest Final Touches (pt. 1)

--- a/src/main/resources/assets/bcm/lang/en_US.lang
+++ b/src/main/resources/assets/bcm/lang/en_US.lang
@@ -71,5 +71,6 @@ tile.BlockBitCrucible.name=Bit Crucible
 tile.BlockBitForge.name=Bit Forge
 tile.BlockBitDyeTable.name=Bit Dye Table
 tile.BlockBitFusionTable.name=Bit Fusion Table
+tile.BlockBitChest.name=Bit Chest
 
 itemGroup.tabBitCraftingMod=BitCrafting
