Enchantment effect fix, recipe book advancements

--- a/src/main/resources/assets/bcm/lang/en_US.lang
+++ b/src/main/resources/assets/bcm/lang/en_US.lang
@@ -1,4 +1,4 @@
-item.nullBit.name=Null Bit
+item.nullBit.name=Any Bit
 item.lightestgray.name=White Bit
 item.lightgray.name=Light Gray Bit
 item.gray.name=Gray Bit
