I made these changs months ago and don't remember why

--- a/src/main/resources/assets/bcm/lang/en_US.lang
+++ b/src/main/resources/assets/bcm/lang/en_US.lang
@@ -39,11 +39,11 @@ item.lightcyan.name=Light Cyan Bit
 item.cyan.name=Cyan Bit
 item.darkcyan.name=Dark Cyan Bit
 item.darkestcyan.name=Darkest Cyan Bit
-item.lightestlightblue.name=Lightest LightBlue Bit
-item.lightlightblue.name=Light LightBlue Bit
-item.lightblue.name=LightBlue Bit
-item.darklightblue.name=Dark LightBlue Bit
-item.darkestlightblue.name=Darkest LightBlue Bit
+item.lightestlblue.name=Lightest LightBlue Bit
+item.lightlblue.name=Light LightBlue Bit
+item.lblue.name=LightBlue Bit
+item.darklblue.name=Dark LightBlue Bit
+item.darkestlblue.name=Darkest LightBlue Bit
 item.lightestblue.name=Lightest Blue Bit
 item.lightblue.name=Light Blue Bit
 item.blue.name=Blue Bit
@@ -84,8 +84,8 @@ item.ItemShovelTemplate.name=Shovel Template
 
 tile.BlockBitCrucible.name=Bit Crucible
 tile.BlockBitForge.name=Bit Forge
-tile.BlockBitDyeTable.name=Bit Dye Table
-tile.BlockBitFusionTable.name=Bit Fusion Table
+tile.BlockBitDyeTable.name=Bit Colorizer
+tile.BlockBitFusionTable.name=Bit Aggregator
 tile.BlockFireOre.name=Fire Bit Ore
 tile.BlockEarthOre.name=Earth Bit Ore
 tile.BlockLightningOre.name=Lightning Bit Ore
